added a proper way to build and publish http clients with a generation steps
